--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Rocket Patrol</title>
     <script src= "./lib/phaser.js"></script>
     <script src= "./src/prefabs/Rocket.js"></script>
-    <script src="./src/scenes/Menu.js"></script>
-    <script src="./src/scenes/Play.js"></script>
-    <script src="./src/main.js"></script>
+    <script src= "./src/prefabs/Spaceship.js"></script>
+    <script src= "./src/scenes/Menu.js"></script>
+    <script src= "./src/scenes/Play.js"></script>
+    <script src= "./src/main.js"></script>
     <style>
         body {
             background-color: beige;
